--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 178,
    "metadata": {
     "collapsed": false
    },
@@ -27,81 +27,69 @@
     "#X = dataset.iloc[:, :-1].values\n",
     "#y = dataset.iloc[:, 3].values\n",
     "\n",
-    "def get_dataset(first_class = 'H'):\n",
-    "    classes = set()\n",
-    "    with open('full.csv', 'r', encoding=\"utf8\") as file:\n",
-    "        for line in file:\n",
-    "            data = line.split('|')\n",
-    "            if len(data) == 7:\n",
-    "                data_classes = data[1].split(',')\n",
-    "                cl_set = set()\n",
-    "                for cl in data_classes:\n",
-    "                    c = cl.upper()\n",
-    "                    c = c.replace(' ', '')\n",
-    "                    a = re.search(r'([A-H])([0-9]{2})([A-Z])', c, re.M|re.I)\n",
-    "                    try:\n",
-    "                        if a.group(1) == first_class:\n",
-    "                            classes.add(a.group(1) + a.group(2) + a.group(3))\n",
-    "                    except:\n",
-    "                        pass\n",
+    "def get_dataset(first_class = 'H', max_N=0):\n",
     "    \n",
-    "    classes_dict = {}\n",
-    "    for i in classes:\n",
-    "        classes_dict[i] = 0\n",
-    "\n",
+    "    id = 0\n",
+    "    classes = {}\n",
     "    X = []\n",
     "    y = []\n",
     "    \n",
     "    with open('full.csv', 'r', encoding=\"utf8\") as file:\n",
+    "        i_N = 0\n",
     "        for line in file:\n",
-    "            data = line.split('|')\n",
-    "            if len(data) == 7:\n",
-    "                data_classes = data[1].split(',')\n",
-    "                my_classes = classes_dict.copy()\n",
-    "                has_class = False\n",
-    "                for cl in data_classes:\n",
-    "                    c = cl.upper()\n",
-    "                    c = c.replace(' ', '')\n",
-    "                    a = re.search(r'([A-H])([0-9]{2})([A-Z])', c, re.M|re.I)\n",
-    "                    try:\n",
-    "                        if a.group(1) == first_class:\n",
-    "                            my_classes[a.group(1) + a.group(2) + a.group(3)] = 1\n",
-    "                            has_class = True\n",
-    "                    except:\n",
-    "                        pass\n",
-    "                if has_class:\n",
-    "                    X.append([data[2], data[3]])\n",
-    "                    y.append(list(my_classes.values()))\n",
-    "    \n",
+    "            if max_N == 0 or i_N < max_N:\n",
+    "                data = line.split('|')\n",
+    "                if len(data) == 7:\n",
+    "                    data_classes = data[1].split(',')\n",
+    "                    cl_set = set()\n",
+    "                    for cl in data_classes:\n",
+    "                        c = cl.upper()\n",
+    "                        c = c.replace(' ', '')\n",
+    "                        a = re.search(r'([A-H])([0-9]{2})([A-Z])', c, re.M|re.I)\n",
+    "                        try:\n",
+    "                            if a.group(1) == first_class:\n",
+    "                                cl_set.add(id)\n",
+    "                                if (a.group(1) + a.group(2) + a.group(3)) not in classes:\n",
+    "                                    classes[a.group(1) + a.group(2) + a.group(3)] = id\n",
+    "                                    id += 1 \n",
+    "                        except:\n",
+    "                            pass\n",
+    "                    if len(cl_set) > 0:\n",
+    "                        X.append([data[2], data[3]])\n",
+    "                        y.append(list(cl_set))\n",
+    "                        i_N += 1\n",
     "    return [X, y, classes]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 180,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "dataset = get_dataset(first_class = 'H')"
+    "dataset = get_dataset(first_class = 'H', max_N = 1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 189,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "X = dataset[0]\n",
-    "y = dataset[1]"
+    "y = dataset[1]\n",
+    "\n",
+    "from sklearn.preprocessing import MultiLabelBinarizer\n",
+    "y = MultiLabelBinarizer().fit_transform(y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 190,
    "metadata": {
     "collapsed": false
    },
@@ -127,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 191,
    "metadata": {
     "collapsed": false
    },
@@ -138,7 +126,7 @@
        "'Envoltorio para maquinas eletricas'"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 192,
    "metadata": {
     "collapsed": true
    },
@@ -166,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 193,
    "metadata": {
     "collapsed": false
    },
@@ -184,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 194,
    "metadata": {
     "collapsed": false
    },
@@ -196,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 195,
    "metadata": {
     "collapsed": false
    },
@@ -220,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 196,
    "metadata": {
     "collapsed": false
    },
@@ -236,7 +224,7 @@
        "            verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 197,
    "metadata": {
     "collapsed": false
    },
@@ -260,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 198,
    "metadata": {
     "collapsed": false
    },
@@ -270,12 +258,11 @@
       "text/plain": [
        "array([ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
        "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
        "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  0.,  0.,  0.,  0.])"
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.])"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,18 +273,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 211,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[100]]\n",
+      "[[100]]\n",
+      "[[100]]\n",
+      "[[100]]\n",
+      "[[100]]\n",
+      "[[100]]\n",
+      "[[99  0]\n",
+      " [ 1  0]]\n",
+      "[[100]]\n",
+      "[[100]]\n",
+      "[[100]]\n",
+      "[[100]]\n",
+      "[[100]]\n",
+      "[[100]]\n",
+      "[[99  0]\n",
+      " [ 1  0]]\n",
+      "[[100]]\n",
+      "[[100]]\n",
+      "[[100]]\n",
+      "[[99  1]\n",
+      " [ 0  0]]\n",
+      "[[99  1]\n",
+      " [ 0  0]]\n",
+      "[[97  0]\n",
+      " [ 1  2]]\n",
+      "[[100]]\n",
+      "[[99  0]\n",
+      " [ 1  0]]\n",
+      "[[99  0]\n",
+      " [ 1  0]]\n",
+      "[[100]]\n",
+      "[[100]]\n",
+      "[[99  0]\n",
+      " [ 1  0]]\n",
+      "[[100]]\n",
+      "[[100]]\n",
+      "[[100]]\n",
+      "[[100]]\n",
+      "[[99  0]\n",
+      " [ 1  0]]\n",
+      "[[94  0]\n",
+      " [ 6  0]]\n",
+      "[[100]]\n",
+      "[[100]]\n",
+      "[[100]]\n",
+      "[[100]]\n",
+      "[[100]]\n",
+      "[[97  0]\n",
+      " [ 3  0]]\n",
+      "[[98  0]\n",
+      " [ 2  0]]\n",
+      "[[99  0]\n",
+      " [ 1  0]]\n",
+      "[[99  0]\n",
+      " [ 1  0]]\n",
+      "[[83  0]\n",
+      " [17  0]]\n",
+      "[[99  0]\n",
+      " [ 1  0]]\n",
+      "[[71  0]\n",
+      " [28  1]]\n",
+      "[[85  0]\n",
+      " [15  0]]\n",
+      "[[98  0]\n",
+      " [ 2  0]]\n",
+      "[[97  0]\n",
+      " [ 3  0]]\n",
+      "[[96  0]\n",
+      " [ 4  0]]\n",
+      "[[92  0]\n",
+      " [ 8  0]]\n"
+     ]
+    }
+   ],
    "source": [
-    "acc = accuracy_score(np.array(y_test), y_pred)"
+    "for i in range(len(y_test[0])):\n",
+    "    print(confusion_matrix(y_test[:, i], y_pred[:, i]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 205,
    "metadata": {
     "collapsed": false
    },
@@ -305,17 +371,20 @@
     {
      "data": {
       "text/plain": [
-       "array([[0, 1, 1, 0, 0, 1],\n",
-       "       [0, 1, 1, 0, 1, 1]])"
+       "100"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.array([[0,1,1,0,0,1],[0,1,1,0,1,1]])"
+    "acc = []\n",
+    "for i in range(len(y_test[0])):\n",
+    "    acc.append(accuracy_score(y_test[:, i], y_pred[:, i]))\n",
+    "\n",
+    "print('Media: ', np.array(acc).mea)"
    ]
   },
   {
@@ -336,9 +405,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "accuracy_score(np.array([[0,1,0,0,0,1],[0,1,1,0,1,1]]), np.array([[1,1,1,0,0,1],[0,1,1,0,0,1]]))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
