--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -63,18 +63,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 213,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "dataset = get_dataset(first_class = 'H', max_N = 1000)"
+    "dataset = get_dataset(first_class = 'H') #, max_N = 1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 214,
    "metadata": {
     "collapsed": false
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 215,
    "metadata": {
     "collapsed": false
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 216,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +126,7 @@
        "'Envoltorio para maquinas eletricas'"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 217,
    "metadata": {
     "collapsed": true
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 218,
    "metadata": {
     "collapsed": false
    },
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 219,
    "metadata": {
     "collapsed": false
    },
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 220,
    "metadata": {
     "collapsed": false
    },
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 221,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +224,7 @@
        "            verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 222,
    "metadata": {
     "collapsed": false
    },
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 223,
    "metadata": {
     "collapsed": false
    },
@@ -259,10 +259,11 @@
        "array([ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
        "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
        "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.])"
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  1.,  0.,  0.,  0.])"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 224,
    "metadata": {
     "collapsed": false
    },
@@ -282,77 +283,92 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[100]]\n",
-      "[[100]]\n",
-      "[[100]]\n",
-      "[[100]]\n",
-      "[[100]]\n",
-      "[[100]]\n",
-      "[[99  0]\n",
-      " [ 1  0]]\n",
-      "[[100]]\n",
-      "[[100]]\n",
-      "[[100]]\n",
-      "[[100]]\n",
-      "[[100]]\n",
-      "[[100]]\n",
-      "[[99  0]\n",
-      " [ 1  0]]\n",
-      "[[100]]\n",
-      "[[100]]\n",
-      "[[100]]\n",
-      "[[99  1]\n",
-      " [ 0  0]]\n",
-      "[[99  1]\n",
-      " [ 0  0]]\n",
-      "[[97  0]\n",
-      " [ 1  2]]\n",
-      "[[100]]\n",
-      "[[99  0]\n",
-      " [ 1  0]]\n",
-      "[[99  0]\n",
-      " [ 1  0]]\n",
-      "[[100]]\n",
-      "[[100]]\n",
-      "[[99  0]\n",
-      " [ 1  0]]\n",
-      "[[100]]\n",
-      "[[100]]\n",
-      "[[100]]\n",
-      "[[100]]\n",
-      "[[99  0]\n",
-      " [ 1  0]]\n",
-      "[[94  0]\n",
-      " [ 6  0]]\n",
-      "[[100]]\n",
-      "[[100]]\n",
-      "[[100]]\n",
-      "[[100]]\n",
-      "[[100]]\n",
-      "[[97  0]\n",
-      " [ 3  0]]\n",
-      "[[98  0]\n",
-      " [ 2  0]]\n",
-      "[[99  0]\n",
-      " [ 1  0]]\n",
-      "[[99  0]\n",
-      " [ 1  0]]\n",
-      "[[83  0]\n",
-      " [17  0]]\n",
-      "[[99  0]\n",
-      " [ 1  0]]\n",
-      "[[71  0]\n",
-      " [28  1]]\n",
-      "[[85  0]\n",
-      " [15  0]]\n",
-      "[[98  0]\n",
-      " [ 2  0]]\n",
-      "[[97  0]\n",
-      " [ 3  0]]\n",
-      "[[96  0]\n",
-      " [ 4  0]]\n",
-      "[[92  0]\n",
-      " [ 8  0]]\n"
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3613    0]\n",
+      " [   1    0]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3609    0]\n",
+      " [   2    3]]\n",
+      "[[3613    0]\n",
+      " [   1    0]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3611    0]\n",
+      " [   3    0]]\n",
+      "[[3612    0]\n",
+      " [   2    0]]\n",
+      "[[3613    0]\n",
+      " [   1    0]]\n",
+      "[[3613    0]\n",
+      " [   1    0]]\n",
+      "[[3612    0]\n",
+      " [   2    0]]\n",
+      "[[3611    0]\n",
+      " [   3    0]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3614]]\n",
+      "[[3612    0]\n",
+      " [   2    0]]\n",
+      "[[3606    0]\n",
+      " [   8    0]]\n",
+      "[[3609    0]\n",
+      " [   5    0]]\n",
+      "[[3613    0]\n",
+      " [   1    0]]\n",
+      "[[3601    0]\n",
+      " [  13    0]]\n",
+      "[[3610    0]\n",
+      " [   4    0]]\n",
+      "[[3588    0]\n",
+      " [  26    0]]\n",
+      "[[3597    0]\n",
+      " [  17    0]]\n",
+      "[[3614]]\n",
+      "[[3613    1]\n",
+      " [   0    0]]\n",
+      "[[3602    0]\n",
+      " [  12    0]]\n",
+      "[[3596    0]\n",
+      " [  18    0]]\n",
+      "[[3611    0]\n",
+      " [   3    0]]\n",
+      "[[3606    0]\n",
+      " [   8    0]]\n",
+      "[[3600    0]\n",
+      " [  14    0]]\n",
+      "[[3613    0]\n",
+      " [   1    0]]\n",
+      "[[3614]]\n",
+      "[[  81  968]\n",
+      " [  30 2535]]\n",
+      "[[2865    9]\n",
+      " [ 714   26]]\n",
+      "[[3573    0]\n",
+      " [  41    0]]\n",
+      "[[3496    1]\n",
+      " [ 109    8]]\n"
      ]
     }
    ],
@@ -363,18 +379,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 225,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Media:  0.990358376429\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "100"
+       "[1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 0.99972329828444939,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 0.99944659656889878,\n",
+       " 0.99972329828444939,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 0.99916989485334806,\n",
+       " 0.99944659656889878,\n",
+       " 0.99972329828444939,\n",
+       " 0.99972329828444939,\n",
+       " 0.99944659656889878,\n",
+       " 0.99916989485334806,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 1.0,\n",
+       " 0.99944659656889878,\n",
+       " 0.99778638627559491,\n",
+       " 0.99861649142224684,\n",
+       " 0.99972329828444939,\n",
+       " 0.99640287769784175,\n",
+       " 0.99889319313779745,\n",
+       " 0.9928057553956835,\n",
+       " 0.9952960708356392,\n",
+       " 1.0,\n",
+       " 0.99972329828444939,\n",
+       " 0.99667957941339236,\n",
+       " 0.99501936912008859,\n",
+       " 0.99916989485334806,\n",
+       " 0.99778638627559491,\n",
+       " 0.99612617598229114,\n",
+       " 0.99972329828444939,\n",
+       " 1.0,\n",
+       " 0.72385168788046483,\n",
+       " 0.79994465965688988,\n",
+       " 0.98865522966242392,\n",
+       " 0.96956281128943]"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +464,8 @@
     "for i in range(len(y_test[0])):\n",
     "    acc.append(accuracy_score(y_test[:, i], y_pred[:, i]))\n",
     "\n",
-    "print('Media: ', np.array(acc).mea)"
+    "print('Media: ', np.array(acc).mean())\n",
+    "acc"
    ]
   },
   {
