Modificado stats e classifier

--- a/classifier.ipynb
+++ b/classifier.ipynb
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 226,
    "metadata": {
     "collapsed": false
    },
@@ -478,15 +478,73 @@
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "{'H01B': 16,\n",
+       " 'H01C': 8,\n",
+       " 'H01F': 6,\n",
+       " 'H01G': 13,\n",
+       " 'H01H': 1,\n",
+       " 'H01J': 17,\n",
+       " 'H01K': 18,\n",
+       " 'H01L': 30,\n",
+       " 'H01M': 19,\n",
+       " 'H01P': 35,\n",
+       " 'H01Q': 29,\n",
+       " 'H01R': 2,\n",
+       " 'H01S': 7,\n",
+       " 'H01T': 20,\n",
+       " 'H02B': 11,\n",
+       " 'H02C': 51,\n",
+       " 'H02G': 4,\n",
+       " 'H02H': 25,\n",
+       " 'H02J': 22,\n",
+       " 'H02K': 0,\n",
+       " 'H02M': 21,\n",
+       " 'H02N': 10,\n",
+       " 'H02P': 26,\n",
+       " 'H02R': 48,\n",
+       " 'H02S': 56,\n",
+       " 'H02V': 46,\n",
+       " 'H03B': 49,\n",
+       " 'H03C': 36,\n",
+       " 'H03D': 32,\n",
+       " 'H03F': 42,\n",
+       " 'H03G': 43,\n",
+       " 'H03H': 40,\n",
+       " 'H03J': 33,\n",
+       " 'H03K': 39,\n",
+       " 'H03L': 37,\n",
+       " 'H03M': 38,\n",
+       " 'H04B': 23,\n",
+       " 'H04D': 45,\n",
+       " 'H04G': 52,\n",
+       " 'H04H': 41,\n",
+       " 'H04J': 24,\n",
+       " 'H04K': 34,\n",
+       " 'H04L': 31,\n",
+       " 'H04M': 12,\n",
+       " 'H04N': 5,\n",
+       " 'H04Q': 14,\n",
+       " 'H04R': 3,\n",
+       " 'H04S': 28,\n",
+       " 'H04W': 54,\n",
+       " 'H05B': 15,\n",
+       " 'H05C': 27,\n",
+       " 'H05F': 50,\n",
+       " 'H05G': 53,\n",
+       " 'H05H': 47,\n",
+       " 'H05K': 9,\n",
+       " 'H61C': 44,\n",
+       " 'H99Z': 55}"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "dataset[2]"
+   ]
   },
   {
    "cell_type": "code",
